--- a/css/main.css
+++ b/css/main.css
@@ -264,14 +264,18 @@ pre {
  * Page content
  */
 .page-content {
-  padding: 30px 0; }
+  padding: 30px 0;
+  background-color: #DCDCDC;
+  background: url(/image/timg1.jpg);
+  background-size: 100%; }
 
 .page-heading {
   font-size: 20px; }
 
 .post-list {
   margin-left: 0;
-  list-style: none; }
+  list-style: none;
+  background-color: #DCDCDC; }
   .post-list > li {
     margin-bottom: 30px; }
 
@@ -287,7 +291,8 @@ pre {
  * Posts
  */
 .post-header {
-  margin-bottom: 30px; }
+  #margin-bottom: 30px;
+  background-color: #DCDCDC; }
 
 .post-title {
   font-size: 42px;
@@ -298,7 +303,8 @@ pre {
       font-size: 36px; } }
 
 .post-content {
-  margin-bottom: 30px; }
+  #margin-bottom: 30px;
+  background-color: #DCDCDC; }
   .post-content h2 {
     font-size: 32px; }
     @media screen and (max-width: 800px) {
