--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,12 @@ dl, dd, ol, ul, figure {
   margin: 0;
   padding: 0; }
 
+p, h1, h2, h3, h4, h5, h6, ol, ul {
+  color: #ffffff; }
+
+p > code, li > pre, li > code {
+  color: #000033; }
+
 /**
  * Basic styling
  */
@@ -19,7 +25,9 @@ body {
   -moz-font-feature-settings: "kern" 1;
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
-  font-kerning: normal; }
+  font-kerning: normal;
+  #background-color: #1A1A1A;
+  background-color: #080808; }
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
@@ -159,9 +167,8 @@ pre {
   line-height: 56px;
   letter-spacing: -1px;
   margin-bottom: 0;
-  float: left; }
-  .site-title, .site-title:visited {
-    color: #424242; }
+  float: left;
+  color: #2a7ae2; }
 
 .site-nav {
   float: right;
@@ -264,18 +271,14 @@ pre {
  * Page content
  */
 .page-content {
-  padding: 30px 0;
-  background-color: #DCDCDC;
-  background: url(/image/timg1.jpg);
-  background-size: 100%; }
+  padding: 30px 0; }
 
 .page-heading {
   font-size: 20px; }
 
 .post-list {
   margin-left: 0;
-  list-style: none;
-  background-color: #DCDCDC; }
+  list-style: none; }
   .post-list > li {
     margin-bottom: 30px; }
 
@@ -291,8 +294,7 @@ pre {
  * Posts
  */
 .post-header {
-  #margin-bottom: 30px;
-  background-color: #DCDCDC; }
+  margin-bottom: 30px; }
 
 .post-title {
   font-size: 42px;
@@ -303,8 +305,8 @@ pre {
       font-size: 36px; } }
 
 .post-content {
-  #margin-bottom: 30px;
-  background-color: #DCDCDC; }
+  margin-bottom: 30px;
+  #background-color: #DCDCDC; }
   .post-content h2 {
     font-size: 32px; }
     @media screen and (max-width: 800px) {
