--- a/content/css/github-markdown.css
+++ b/content/css/github-markdown.css
@@ -14,6 +14,7 @@
   font-size: 1.6rem;
   line-height: 2;
   word-wrap: break-word;
+  color: var(--color-text-md-content)
 }
 
 @media (max-width: 768px) {
@@ -216,17 +217,17 @@
 }
 
 .markdown-body a {
-  color: #666;
+  color: var(--color-text-a);
   text-decoration: none;
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid var(--color-text-a);
   font-size: 1em;
   transition: color 0.3s;
 }
 
 .markdown-body a:hover {
   text-decoration: none;
-  color: black;
-  border-bottom: 1px solid black;
+  color: var(--color-text-a-hover);
+  border-bottom: 1px solid var(--color-text-a-hover);
 }
 
 .markdown-body strong {
@@ -438,9 +439,9 @@
 .markdown-body blockquote {
   /*margin: 3rem 0;*/
   padding: 15px;
-  color: #555;
-  border-left: 0.25em solid #555;
-  background: #EEEEEE;
+  color: var(--color-block-md-quote);
+  border-left: 0.25em solid var(--color-block-md-quote);
+  background: var(--bg-block-md-quote);
   border-radius: 3px;
 }
 
@@ -625,16 +626,16 @@
 .markdown-body table th,
 .markdown-body table td {
   padding: 6px 13px;
-  border: 1px solid #dfe2e5;
+  border: 2px solid var(--color-border-md-table);
 }
 
 .markdown-body table tr {
-  background-color: #fff;
-  border-top: 1px solid #c6cbd1;
+  background-color: var(--bg-block-md-table);
+  border-top: 2px solid var(--color-border-md-table);
 }
 
 .markdown-body table tr:nth-child(2n) {
-  background-color: #f6f8fa;
+  background-color: var(--bg-block-md-table-2);
 }
 
 .markdown-body img {
@@ -659,8 +660,8 @@
   font-size: 85%;
   font-weight: 600;
   border-radius: 3px;
-  background-color: #f8f8f8;
-  color: #e96900;
+  background-color: var(--bg-text-md-code);
+  color: var(--color-text-md-code);
 }
 
 .markdown-body pre {
@@ -693,7 +694,7 @@
   overflow: auto;
   font-size: 90%;
   line-height: 1.8;
-  background-color: #fcfcfc;
+  background-color: var(--bg-block-md-pre);
   border-radius: 5px;
 }
 
@@ -707,6 +708,7 @@
   word-wrap: normal;
   background-color: transparent;
   border: 0;
+  color: var(--color-text-md-pre)
 }
 
 .markdown-body .full-commit .btn-outline:not(:disabled):hover {
